syntax="proto3";
package services;
import "google/protobuf/timestamp.proto";
message ProdModel {// 商品模型
  int32 prod_id=1;
  string prod_name=2;
  float prod_price=3;
  google.protobuf.Timestamp created_time=4;
}

